# Privateframe

./: .gitignore  MVP_STATUS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/admin/: router.py
backend/app/audit/: models.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/billing/: router.py
backend/app/chat/: models.py  realtime.py  router.py
backend/app/core/: config.py  database.py  email.py  enums.py  passwords.py  rate_limit.py
backend/app/posts/: models.py  router.py  schemas.py  service.py
backend/app/profiles/: models.py  router.py  schemas.py  service.py
backend/app/reports/: models.py  router.py
backend/app/social/: router.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: b79a1d7f35c2_account_security.py  c8d7e6f5a4b3_privacy_matching.py  efe6fdc87b1e_initial_schema.py
backend/tests/: conftest.py  test_admin_report_context.py  test_auth_flow.py  test_chat.py  test_passwords.py  test_posts_flow.py  test_privacy_matching.py  test_profiles_flow.py
deploy/: nginx-privateframe.conf  privateframe-backend.service  remote-deploy.sh
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/core/: api.service.ts  auth.guards.ts  authenticated-image.directive.ts  chat-presence.service.ts  chat-socket.service.ts  http-error.ts  session.service.ts
frontend/src/app/features/: admin-page.component.ts  age-page.component.ts  chat-page.component.ts  discover-page.component.ts  forgot-password-page.component.ts  home-page.component.ts  login-page.component.ts  my-photos-page.component.ts  posts-page.component.ts  profile-detail-page.component.ts  (+4 more)
frontend/src/environments/: environment.development.ts
