[project]
name = "privateframe-backend"
version = "0.1.0"
description = "PrivateFrame FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
