[project]
name = "privateframe-backend"
version = "0.1.0"
description = "PrivateFrame FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]==0.115.6",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
