[project]
name = "privateframe-backend"
version = "0.1.0"
description = "PrivateFrame FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "fastapi[standard]==0.115.6",
    "sqlmodel==0.0.22",
    "psycopg[binary]==3.2.3",
    "pydantic-settings==2.7.0",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
